@@ -86,7 +86,7 @@ PangoFontDescription *fixed_font;
 static int usecwd;
 static int shellok;
 static int manpref;
-char gpcolors[32];
+char gpcolors[64];
 static char datapage[24];
 static char scriptpage[24];
 
@@ -1374,16 +1374,35 @@ static void set_lcnumeric (void)
 
 static void set_gp_colors (void)
 {
+    const char *s = gpcolors;
     char cstr[N_GP_COLORS][8];
-    int i, nc;
+    int i, nc = 0;
 
-    *cstr[0] = *cstr[1] = *cstr[2] = *cstr[3] = '\0';
+    for (i=0; i<N_GP_COLORS; i++) {
+	if (sscanf(s, "%7s", cstr[i]) == 1) {
+	    nc++;
+	    s += 7;
+	    if (*s == ' ') {
+		s++;
+	    } else {
+		break;
+	    }
+	} else {
+	    *cstr[i] = '\0';
+	    break;
+	}
+    }
 
-    nc = sscanf(gpcolors, "%7s %7s %7s %7s", 
-		cstr[0], cstr[1], cstr[2], cstr[3]);
-
-    for (i=0; i<nc; i++) {
-	set_graph_palette_from_string(i, cstr[i]);
+    if (nc == 4) {
+	/* old-style */
+	for (i=0; i<3; i++) {
+	    set_graph_palette_from_string(i, cstr[i]);
+	}
+	set_graph_palette_from_string(BOXCOLOR, cstr[3]);
+    } else {
+	for (i=0; i<nc; i++) {
+	    set_graph_palette_from_string(i, cstr[i]);
+	}
     }
 }
 
