@@ -66,7 +66,7 @@ struct gretlRGB_ {
 
 #define MAXTITLE 128
 #define MAX_PLOT_LABELS 3
-#define N_GP_COLORS 4
+#define N_GP_COLORS 7
 #define BOXCOLOR (N_GP_COLORS - 1)
 
 typedef enum {
